--- a/edition_limite.css
+++ b/edition_limite.css
@@ -1,23 +1,21 @@
-@font-face {
+/*@font-face {
     font-family: 'shadows_into_lightregular';
     src: url('shadowsintolight-regular-webfont.woff2') format('woff2'),
          url('shadowsintolight-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
-}
+}*/
 
 body
 {
-    font-family: shadows_into_lightregular;
-    background-image: url("fond_ecran_test.jpg");
+    background-image: url("image/fond_ecran_test.jpg");
     background-repeat:no-repeat;
     background-size: 100%;
     background-attachment:fixed;
     background-size: cover;
 
 }
-
 .bloc_page
 {
     display: flex;
@@ -25,42 +23,29 @@ body
     width: 1100px;
     height: 100%;
     margin: auto;
-    background-image: url("fond_page.jpg");
+    background-image: url("image/fond_page.jpg");
     background-repeat:no-repeat;
     background-size: 100%;
     border-radius: 10px;
     padding-bottom: 10px;
-    border: solid 2px black;
     margin-bottom: 50px;
-   
 }
-
 /*Partie en tête*/
-
     /*Titre Edition limitée*/
         header h1
         {
             margin : 0 0 0 0;
-            
             text-align: center;       
             font-size:8em;
             -webkit-text-stroke: 2px black; 
-            
-             
             background: linear-gradient(90deg, rgb(189, 6, 6) 20%,
             rgba(206, 124, 17, 1) 29%, rgba(180, 178, 16, 1) 40%,
             rgba(14, 143, 28, 0.89) 54%, rgba(123, 14, 114, 1) 69%, 
             rgba(37, 17, 206, 1) 83%);
-            
             -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            
-            border: solid 2px black;
-            
+            -webkit-text-fill-color: transparent;   
         }
     /*Fin titre Edition limitée*/
-    
-
     /*Onglet de navigation*/
         nav ul
         {
@@ -68,32 +53,26 @@ body
             list-style-type: none;
             justify-content:center;
             margin : 0 10px 10px 10px;
-            background-image: url("onglet2.jpg");
+            background-image: url("image/onglet2.jpg");
             background-size: 100%;
             background-repeat:no-repeat;
             padding-top: 10px;
             padding-bottom: 10px;
             box-shadow: 0px 3px 6px #1c1a19;
             border-radius: 10px;
-            
         }
-
         nav li
         {
             margin: auto;
             font-size: 1.8em;
             font-weight: bold;
         }
-
         nav li a
         {
             color: black;
         }
     /*Fin onglet de navigation*/
-
 /*Fin partie en tête*/
-    
-
 /*Partie pied de page*/
     footer
     {
@@ -101,7 +80,7 @@ body
         height: 130px;
         justify-content: space-between;
         margin : 50px 10px 10px 10px;
-        background-image: url("fond_footer.jpg");
+        background-image: url("image/fond_footer.jpg");
         background-size: 100%;
         background-repeat:no-repeat;
         box-shadow: 0px 3px 6px #1c1a19;
@@ -109,7 +88,6 @@ body
        
         
     }
-
     /*Partie gauche footer*/
         #contact
         {
@@ -119,16 +97,13 @@ body
         {
             margin: 10px 0 10px 0;
             text-decoration: underline;
-            font-size: 1.3em;
-            
+            font-size: 1.3em;   
         }
         #contact p
         {
             margin: 0 0 0 0;
         }
-
     /*Fin partie gauche footer*/
-
     /*Partie milieu footer*/
         #signature
         {
@@ -137,7 +112,6 @@ body
         font-size: 1.5em;
         }
     /*Fin partie milieu footer*/
-
     /*Partie droite footer*/
         #signature_jo
         { 
@@ -156,11 +130,7 @@ body
             font-weight: bold;
         }
     /*Fin partie droit footer*/
-
 /*Fin partie pied de page*/
-
-
-
 /*Partie présentation de la guilde*/
 #bloc_presentation
 {
@@ -168,7 +138,6 @@ body
     height: 450px;
 
 }
-
 #presentation
 {
     width: 70%;
@@ -179,25 +148,22 @@ body
     font-size: 1.9em;
     text-decoration: underline;
     margin: 10px 0 30px 10px;
-   
 }
 #presentation p
 {
    font-size: 1.2em;
    margin: 20px 0 0 10px;
 }
-
 aside
 {    
     margin: 50px 0 0 10px;
     text-align: center;
     width: 25%;
-    background-image: url("fond_page.jpg");
+    background-image: url("image/fond_page.jpg");
     background-size: 100%;
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
 }
-
 aside h1
 {
     margin: 40px 0 0 0 ;
@@ -207,8 +173,6 @@ aside h1
     color: black;
 }
 /*Fin présentation de la guilde*/
-
-
 /*Partie Postulation*/
 #bloc_postuler
 {
@@ -216,8 +180,6 @@ aside h1
     text-align: center;
     margin: auto;
 }
-
-
 /*CHARTE DE GUILDE*/
     /*Titres*/
         .bloc_chartedeguilde h1
@@ -276,14 +238,10 @@ aside h1
     }
     #image_epilogue
     {
-        
         margin: 0 0 0 400px;
         width: 300px;
         height: 100%;
     }
-   
-
-
 /*Fin CHARTE DE GUILDE*/
 
 
